# os-dhcp-server

./: AUTHORS  ChangeLog  HACKING.rst  README.rst  requirements.txt  setup.cfg
etc/os-dhcp-server/samples/: basic_subnet
extra/: client_demo.py  dhquery.py  pydhcp.py  sdhcpd.py  server_demo.py
os_dhcp_server/: cli.py  dhcp_packet.py  globals.py  network.py  objects.py  packet.py  server.py  utils.py  version.py
os_dhcp_server/tests/: base.py  test_cli.py  test_dhcp_packet.py
