[metadata]
name = os-dhcp-server
summary = OpenStack network configuration
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/dsneddon/os-dhcp-server
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    os_dhcp_server

[global]
setup-hooks =
        pbr.hooks.setup_hook

[entry_points]
console_scripts =
        os-dhcp-server = os_dhcp_server.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_dhcp_server/locale
domain = os-dhcp-server

[update_catalog]
domain = os-dhcp-server
output_dir = os_dhcp_server/locale
input_file = os_dhcp_server/locale/os-dhcp-server.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_dhcp_server/locale/os-dhcp-server.pot

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
